fixing layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@ img {
   height: auto;
 }
 
-[class*="col-"] {
+/* [class*="col-"] {
   padding: 0 0;
-}
+} */
 
 
 
@@ -117,6 +117,9 @@ header .navbar-default .navbar-nav>.active>a{
 
 .navbar-brand {
   padding: 15px 0;
+}
+.navbar-form{
+  padding: 0 0;
 }
 
 
@@ -228,6 +231,7 @@ font-weight: bold;
 
 .deploy_block{
   margin: 3% 3%;
+
   /* padding: 0 10%; */
 }
 
